--- a/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrder.wxml
+++ b/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrder.wxml
@@ -144,4 +144,11 @@
 			</view>
 		</view>
 	</van-popup>
+
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toIndex"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
