--- a/pages/billingManagement/packingOrder/packingOrderDetail.wxml
+++ b/pages/billingManagement/packingOrder/packingOrderDetail.wxml
@@ -148,5 +148,13 @@
 	</l-mask>
 
 	<l-message content="{{content}}" />
-	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="11" bind:cancel="closeCheckDetail"></check-detail>
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="11"
+		bind:cancel="closeCheckDetail"></check-detail>
+
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toPrev"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
