--- a/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.scss
+++ b/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.scss
@@ -82,5 +82,9 @@
     background: transparent;
     border-radius: 10rpx;
     content: "";
+	}
+	
+	.widthCalc {
+    width: calc(100% - 35px);
   }
 }
