--- a/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrderDetail.wxml
+++ b/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrderDetail.wxml
@@ -63,9 +63,9 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail" />
 		<van-image wx:else style="position: absolute;right:2%;top:2%" width="90" height="90"
-			src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
+			src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail" />
 	</view>
 
 	<!-- 原料信息 -->
@@ -175,5 +175,13 @@
 	</l-mask>
 
 	<l-message content="{{content}}" />
-	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="3" bind:cancel="closeCheckDetail"></check-detail>
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="3"
+		bind:cancel="closeCheckDetail"></check-detail>
+
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toPrev"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
