--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.scss
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.scss
@@ -77,5 +77,9 @@
     background: transparent;
     border-radius: 10rpx;
     content: "";
+	}
+	
+	.widthCalc {
+    width: calc(100% - 35px);
   }
 }
