--- a/pages/billingManagement/workshopSettlementLog/workshopSettlementLogDetail.wxml
+++ b/pages/billingManagement/workshopSettlementLog/workshopSettlementLogDetail.wxml
@@ -27,7 +27,7 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail" />
 		<view wx:else class="colorRed bold" style="position: absolute;right:5%;top:5%" bindtap="openCheckDetail">单据异常</view>
 	</view>
 
@@ -217,5 +217,13 @@
 		<view class="line"></view>
 		<view class="tc" bindtap="closePro">关闭</view>
 	</van-popup>
-	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="14" bind:cancel="closeCheckDetail"></check-detail>
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="14"
+		bind:cancel="closeCheckDetail"></check-detail>
+
+	<movable-area class="movable-area">
+		<movable-view class="movable-view" direction="vertical" x="10000000000" y='500'>
+			<view class="pof bgColorWhite pt5 pr10 pb5 pl10 color27A2" bindtap="toPrev"
+				style="border: 1px solid #008df96b; border-radius:5px 0 0 5px;border-right: none;">上一页</view>
+		</movable-view>
+	</movable-area>
 </view>
