--- a/pages/billingManagement/deductionForm/deductionForm.scss
+++ b/pages/billingManagement/deductionForm/deductionForm.scss
@@ -87,4 +87,13 @@
 	.trans .van-popup{
 		background-color: transparent;
 	}
+
+	.title{
+		padding: 10px;
+		padding-bottom: 0;
+	}
+
+	.resetHalf .van-button {
+		border-bottom: unset;
+	}
 }
