--- a/pages/billingManagement/oppositeInvoicing/oppositeInvoicing.scss
+++ b/pages/billingManagement/oppositeInvoicing/oppositeInvoicing.scss
@@ -82,5 +82,14 @@
     background: transparent;
     border-radius: 10rpx;
     content: "";
-  }
+	}
+	
+	.title{
+		padding: 10px;
+		padding-bottom: 0;
+	}
+
+	.resetHalf .van-button {
+		border-bottom: unset;
+	}
 }
