--- a/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.scss
+++ b/pages/billingManagement/rawMaterialProcessingOrder/rawMaterialProcessingOrder.scss
@@ -86,5 +86,14 @@
 	
 	.widthCalc {
     width: calc(100% - 35px);
-  }
+	}
+	
+	.title{
+		padding: 10px;
+		padding-bottom: 0;
+	}
+
+	.resetHalf .van-button {
+		border-bottom: unset;
+	}
 }
