--- a/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
+++ b/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
@@ -21,7 +21,7 @@
 			<view class="vh60 pof bgColorWhite" style="z-index: 99;left:0 ;right: 0">
 				<mp-vtabs vtabs="{{vtabs}}" activeTab="{{activeTab}}" tabActiveTextColor="#27A2fd" tabLineColor="#27A2fd">
 					<mp-vtabs-content tabIndex="{{0}}">
-						<view class="title">创建人</view>
+						<view class="vtabtitle">创建人</view>
 						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="user">
 							<label class="radio" wx:for="{{userList}}" wx:key="key">
 								<view>
@@ -32,7 +32,7 @@
 						</radio-group>
 					</mp-vtabs-content>
 					<mp-vtabs-content tabIndex="{{1}}">
-						<view class="title">负责小组</view>
+						<view class="vtabtitle">负责小组</view>
 						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="group">
 							<label class="radio" wx:for="{{groupList}}" wx:key="key">
 								<view>
@@ -43,7 +43,7 @@
 						</radio-group>
 					</mp-vtabs-content>
 					<mp-vtabs-content tabIndex="{{2}}">
-						<view class="title">订单/样单</view>
+						<view class="vtabtitle">订单/样单</view>
 						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="order_type">
 							<label class="radio" wx:for="{{orderType}}" wx:key="key">
 								<view>
@@ -54,7 +54,7 @@
 						</radio-group>
 					</mp-vtabs-content>
 					<mp-vtabs-content tabIndex="{{3}}">
-						<view class="title">审核状态</view>
+						<view class="vtabtitle">审核状态</view>
 						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="status">
 							<label class="radio" wx:for="{{statusList}}" wx:key="key">
 								<view>
@@ -65,7 +65,7 @@
 						</radio-group>
 					</mp-vtabs-content>
 					<mp-vtabs-content tabIndex="{{4}}">
-						<view class="title">创建时间</view>
+						<view class="vtabtitle">创建时间</view>
 						<radio-group class="radio-label flex flexWarp ml10" bindchange="bindPickerChangeAge" data-type="date">
 							<label class="radio" wx:for="{{dateList}}" wx:key="key">
 								<view>
